# Mobile-Architechture

./: frames_2025-10-22_18.45.32.gv  frames_2025-10-22_18.54.21.gv  frames_2025-10-22_18.58.21.gv  frames_2025-10-23_13.10.40.gv  frames_2025-10-31_01.13.48.gv  frames_2025-10-31_01.27.38.gv  rviz2 command  start_and_build.sh
backup/: smartcar_1.urdf.xacro  smartcar_2.urdf.xacro  test.urdf
install/: local_setup.sh  setup.sh
install/ackermann_msgs/share/ackermann_msgs/: package.sh
install/ackermann_msgs/share/ament_index/resource_index/parent_prefix_path/: ackermann_msgs
install/car_gazebo_plugin/share/ament_index/resource_index/package_run_dependencies/: car_gazebo_plugin
install/car_gazebo_plugin/share/ament_index/resource_index/parent_prefix_path/: car_gazebo_plugin
install/car_gazebo_plugin/share/car_gazebo_plugin/: car_gazebo.launch.py  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/car_gazebo_plugin/share/car_gazebo_plugin/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  car_gazebo_pluginConfig-version.cmake  car_gazebo_pluginConfig.cmake
install/car_gazebo_plugin/share/car_gazebo_plugin/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/smart_car/lib/smart_car/: joint_state_publisher  joint_state_publisher.py  wheel_odometry.py
install/smart_car/share/ament_index/resource_index/package_run_dependencies/: smart_car
install/smart_car/share/ament_index/resource_index/parent_prefix_path/: smart_car
install/smart_car/share/smart_car/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/smart_car/share/smart_car/cmake/: smart_carConfig-version.cmake  smart_carConfig.cmake
install/smart_car/share/smart_car/environment/: ament_prefix_path.dsv  path.dsv
install/smart_car/share/smart_car/launch/: gazebo.launch.py  nav2.launch.py  smartcar.launch.py  smartcar_gazebo.launch.py
install/smart_car/share/smart_car/rviz/: smartcar.rviz
install/smart_car/share/smart_car/urdf/: smartcar.urdf  smartcar.urdf.xacro
install/smartcar_msgs/include/smartcar_msgs/smartcar_msgs/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  status.h  status.hpp
install/smartcar_msgs/share/smartcar_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/smartcar_msgs/share/smartcar_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_smartcar_msgs__rosidl_generator_cppExport.cmake  export_smartcar_msgs__rosidl_typesupport_fastrtps_cExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  smartcar_msgsConfig-version.cmake  smartcar_msgsConfig.cmake  smartcar_msgs__rosidl_typesupport_cExport.cmake  smartcar_msgs__rosidl_typesupport_cppExport.cmake  smartcar_msgs__rosidl_typesupport_introspection_cppExport.cmake
install/smartcar_msgs/share/smartcar_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/smartcar_msgs/share/smartcar_msgs/msg/: Status.idl  Status.msg
log/: latest_build
src/car_gazebo_plugin/: CMakeLists.txt
src/car_gazebo_plugin/src/: car_gazebo_plugin.cpp
src/smart_car/: CMakeLists.txt
src/smart_car/config/: nav2_params.yaml
src/smart_car/launch/: gazebo.launch.py
src/smart_car/rviz/: smartcar.rviz
src/smartcar_msgs/: CMakeLists.txt
(+24 files in other folders)
